   the libraries are linked with dynamic libraries. Fixed.
 - The preprocessing step of CUDA source files for the OPARI2 instrumentation
   did not add preprocessing flags to the preprocessor invocation. Thus, it
   becomes a full compilation step. Fixed.
 - Fix exponent in the CUDA metric definitions.
 - Fix scorep-config bug on MIC, which always showed an 'Unsupported 
   target mic. Abort'

------------------- Released version 1.4.1 ---------------------------

Bugfixes:
- BG/Q: use optimized MPI rank to SION file mapping (one file per I/O node)
- Fixes in the OpenCL adapter:
  - The Score-P instrumenter did misinterpret the OpenCL library as an
    input file, if it was given as '-l opencl' on the command line. Fixed.
  - Fixed segmentation fault of clReleaseEvent during Score-P OpenCL flush.
  - Fixed wrappers of OpenCL 2.0 functions.
  - Revised mutex locking.
- Apply filtering also to CUDA API exit events.
- The Score-P instrumenter did misinterpret the Pthread library as an input
  file, if it was given as '-l pthread' on the command line. Fixed.
- The collapse node post-processing in the profile happened for the master
  location and lead to errors if a collapse node appeared on anther location.
  Fixed.
- Fixed detection of building a shared library on Cray in the instrumenter.
- Fixed failed OpenMP detection on K if the -Kopenmp flag was combined
  with other flags in a comma separated list.
- Fixed erroneous calculation and presentation of task migration metrics.
- The GCC instrumentation plug-in can now also be built if the used GCC
  installation does not provide a `gmp.h` header.
- Fixed missing DESTDIR support for installing `scorep-config` delegate on
  Xeon Phi.
- Instrumented C/Fortran OpenMP programs on Fujitsu systems showed
  race conditions. Furthermore, C++ applications failed at
  initialization time. This was due to a bug in the Fujitsu compiler
  and OpenMP runtime. Fujitsu provided a workaround that fixed this
  issues.